changed event "onchange" to "onclick" in index.html on line 114.

--- a/html/index.html
+++ b/html/index.html
@@ -111,7 +111,7 @@
                 <div class="col-md-6 card-left text-white p-5 d-flex flex-column justify-content-center">
                     <h1 class="display-4 fw-bold text-uppercase mb-4">Weather <br> Forecast</h1>
                     
-                    <select id="select" class="form-select form-select-lg mb-3 rounded-pill" onchange="checkWeather()">
+                    <select id="select" class="form-select form-select-lg mb-3 rounded-pill" onclick="checkWeather()">
                         <option value="">-- Select City --</option>
                         <option value="Dhaka">Dhaka</option>
                         <option value="Sylhet">Sylhet</option>
